compiler-core/src/parse/snapshots/rakun_core__parse__tests__const_with_function_call_with_args.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn wibble() { 123 }\nconst wib: Int = wibble(1, \"wobble\")\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:18
  │
3 │ const wib: Int = wibble(1, "wobble")
  │                  ^^^^^^^ Functions can only be called within other functions
