compiler-core/src/parse/snapshots/rakun_core__parse__tests__external_attribute_with_non_fn_definition.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erlang, \"module\", \"fun\")\npub type Fun\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:2:1
  │
2 │ @external(erlang, "module", "fun")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ I was expecting a function definition after this
