compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_conditional_rendering.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   let show = True\n   let a = \"conditional\"\n\n   <div>\n       {case show { True -> <span>{a}</span> False  -> <span>Not shown</span> }}\n   </div>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 163,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 35,
                                    },
                                    value: Var {
                                        location: SrcSpan {
                                            start: 31,
                                            end: 35,
                                        },
                                        name: "True",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 28,
                                        },
                                        name: "show",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 39,
                                        end: 60,
                                    },
                                    value: String {
                                        location: SrcSpan {
                                            start: 47,
                                            end: 60,
                                        },
                                        value: "conditional",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 43,
                                            end: 44,
                                        },
                                        name: "a",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 65,
                                        end: 161,
                                    },
                                    tag: None,
                                    children: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 70,
                                                end: 78,
                                            },
                                            value: "\n       ",
                                        },
                                        Case {
                                            location: SrcSpan {
                                                start: 79,
                                                end: 150,
                                            },
                                            subjects: [
                                                Var {
                                                    location: SrcSpan {
                                                        start: 84,
                                                        end: 88,
                                                    },
                                                    name: "show",
                                                },
                                            ],
                                            clauses: [
                                                Clause {
                                                    location: SrcSpan {
                                                        start: 91,
                                                        end: 115,
                                                    },
                                                    pattern: [
                                                        Constructor {
                                                            location: SrcSpan {
                                                                start: 91,
                                                                end: 95,
                                                            },
                                                            name: "True",
                                                            arguments: [],
                                                            module: None,
                                                            constructor: Unknown,
                                                            spread: None,
                                                            type_: (),
                                                        },
                                                    ],
                                                    alternative_patterns: [],
                                                    guard: None,
                                                    then: Html {
                                                        location: SrcSpan {
                                                            start: 99,
                                                            end: 115,
                                                        },
                                                        tag: None,
                                                        children: [
                                                            Var {
                                                                location: SrcSpan {
                                                                    start: 106,
                                                                    end: 107,
                                                                },
                                                                name: "a",
                                                            },
                                                        ],
                                                        arguments: [],
                                                    },
                                                },
                                                Clause {
                                                    location: SrcSpan {
                                                        start: 116,
                                                        end: 148,
                                                    },
                                                    pattern: [
                                                        Constructor {
                                                            location: SrcSpan {
                                                                start: 116,
                                                                end: 121,
                                                            },
                                                            name: "False",
                                                            arguments: [],
                                                            module: None,
                                                            constructor: Unknown,
                                                            spread: None,
                                                            type_: (),
                                                        },
                                                    ],
                                                    alternative_patterns: [],
                                                    guard: None,
                                                    then: Html {
                                                        location: SrcSpan {
                                                            start: 126,
                                                            end: 148,
                                                        },
                                                        tag: None,
                                                        children: [
                                                            HtmlText {
                                                                location: SrcSpan {
                                                                    start: 132,
                                                                    end: 141,
                                                                },
                                                                value: "Not shown",
                                                            },
                                                        ],
                                                        arguments: [],
                                                    },
                                                },
                                            ],
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 151,
                                                end: 155,
                                            },
                                            value: "\n   ",
                                        },
                                    ],
                                    arguments: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            61,
        ],
        new_lines: [
            0,
            16,
            35,
            60,
            61,
            161,
            163,
        ],
    },
}
