compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_custom_component_with_attributes.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   let is_active = true\n\n   <c.button is_active={is_active} class=\"btn-primary\">\n       Click Me\n   </c.button>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 130,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 40,
                                    },
                                    value: Var {
                                        location: SrcSpan {
                                            start: 36,
                                            end: 40,
                                        },
                                        name: "true",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 33,
                                        },
                                        name: "is_active",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 45,
                                        end: 128,
                                    },
                                    tag: None,
                                    children: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 97,
                                                end: 117,
                                            },
                                            value: "\n       Click Me\n   ",
                                        },
                                    ],
                                    arguments: [
                                        CallArg {
                                            label: Some(
                                                "is_active",
                                            ),
                                            location: SrcSpan {
                                                start: 55,
                                                end: 76,
                                            },
                                            value: Var {
                                                location: SrcSpan {
                                                    start: 66,
                                                    end: 75,
                                                },
                                                name: "is_active",
                                            },
                                            implicit: None,
                                        },
                                        CallArg {
                                            label: Some(
                                                "class",
                                            ),
                                            location: SrcSpan {
                                                start: 77,
                                                end: 96,
                                            },
                                            value: String {
                                                location: SrcSpan {
                                                    start: 83,
                                                    end: 96,
                                                },
                                                value: "btn-primary",
                                            },
                                            implicit: None,
                                        },
                                    ],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            41,
        ],
        new_lines: [
            0,
            16,
            40,
            41,
            128,
            130,
        ],
    },
}
